# foropts-rs

./: .gitignore  .travis.yml  Cargo.toml  README.md  release.toml
src/: arg.rs  config.rs  error.rs  iter.rs  lib.rs  util.rs
src/low/: common.rs  config.rs  flag.rs  item.rs  iter.rs  iter_iter.rs  mod.rs  owned_item.rs  policy.rs  slice_iter.rs
src/low/iter_iter/: errors.rs  item.rs  mod.rs
src/low/slice_iter/: errors.rs  mod.rs
src/low/slice_iter/tests/: git_example.rs  mod.rs
src/low/tests/: git_example.rs  helpers.rs  mod.rs
