[package]
name = "foropts"
version = "0.3.7-alpha.0"
authors = ["Jesse A. Tov <jesse.tov@gmail.com>"]
description = "An argument-parsing iterator"
repository = "https://github.com/tov/foropts-rs"
readme = "README.md"
license = "MIT/Apache-2.0"
keywords = ["argument", "cli", "flag", "parser", "parse"]
categories = ["command-line-interface"]

[badges]
travis-ci = { repository = "tov/foropts-rs" }
